# fineladybot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  database.py  finelady.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
fineladybot/: __init__.py  __main__.py  database.py  finelady.py
fineladybot/interfaces/: reddit.py
tests/: conftest.py  test_main.py  test_opt_out.py
